Cleaned things up

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
 <link rel="shortcut icon" href="images/favicon.ico">
 <link rel="stylesheet" href="css/fontello.css">
+<link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="style.css">
 <script src="app.js"></script>
 </head>
@@ -15,10 +16,8 @@
 <body>
   <div class="split-screen">
     <div class="split-screen__left">
-      <div class="wrapper">
-        <img src="/Users/tobygrubb 1 2/Sites/tobygrubb.com/img/TobyGrubb_SelfPortrait.jpg">
-      </div>
-    </div>  
+      <img class="split-screen__image" src="/Users/tobygrubb 1 2/Sites/tobygrubb.com/img/TobyGrubb_SelfPortrait.jpg">
+    </div>
     <div class="split-screen__right">
       <p>With over 15 years of design experience and 50 digital launches under his belt, Toby Grubb served as a Creative Director at <a href="http://www.instrument.com" target="_blank" class="link">Instrument</a> before starting <a href="http://www.this.design" target="_blank" class="link">This.Studio</a> in Portland, Oregon. He provides insights and visual guidance to active global brands, including <a href="http://www.nike.com" target="_blank" class="link">Nike</a>,
       <a href="http://www.burton.com" target="_blank" class="link">Burton</a>, <a href="http://www.blackdiamondequipment.com" target="_blank" class="link">Black Diamond,</a> <a href="http://www.redbull.com" target="_blank" class="link">Red Bull</a> and <a href="http://www.specialized.com" target="_blank" class="link">Specialized
