--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
               <a onmouseover="changeImage('img/blackdiamond_min.jpg')"href="http://www.blackdiamondequipment.com" target="_blank" class="link">Black Diamond,
               </a>
               <a onmouseover="changeImage('img/redbull_min.jpg')" href="http://www.redbull.com" target="_blank" class="link">Red Bull,
-              </a>,
-              <a onmouseover="changeImage('img/zero_min.jpg')" href="http://www.zeromotorcycles.com" target="_blank" class="link"> Zero Motorcycles
+              </a>
+              <a onmouseover="changeImage('img/zero_min.jpg')" href="http://www.zeromotorcycles.com" target="_blank" class="link"> Zero Motorcycles,
               </a> and
               <a onmouseover="changeImage('img/specialized_min.jpg')" href="http://www.specialized.com" target="_blank" class="link">Specialized
               </a>. His unique blend of energy and vision fuels collaboration. He is constantly <a onmouseover="changeImage('img/passtents.jpg_min')" href="http://www.passtents.com" target="_blank" class="link">making</a>,
