--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
               </a>, he provides business strategy and brand guidance to active global brands including
               <a onmouseover="changeImage('img/nike-min.jpg')" href="http://www.nike.com" target="_blank" class="link">Nike
               </a>,
+              <!--<a onmouseover="changeImage('img/google-min.jpg')"href="http://www.google.com" target="_blank" class="link">Google,
+              </a>-->
               <a onmouseover="changeImage('img/blackdiamond-min.jpg')"href="http://www.blackdiamondequipment.com" target="_blank" class="link">Black Diamond,
               </a>
               <a onmouseover="changeImage('img/redbull-min.jpg')" href="http://www.redbull.com" target="_blank" class="link">Red Bull,
