--- a/mac/index.html
+++ b/mac/index.html
@@ -38,9 +38,7 @@
             <!-- Full Screen Slider -->
         	<div class="tg-slider">
                 <ul class="slides">
-
-
-                    <li <li class="dark-bg" style="background-image:url(images/projects/MacArthur_Header.jpg)">
+                    <li class="dark-bg" style="background-image:url(images/projects/MacArthur_Header.jpg); background-color:#0c2359">
                         <div class="overlay" style="background-color:rgba(0,0,0,0)"></div>
                     </li>
 
@@ -96,7 +94,7 @@
 
             <div class="container">
             <div class="text-align-center">
-				<hr><p>The proposed school identity features a primary mark, known as the "General's Star". It utilizes an enhanced color palette and has a light and dark version. The secondary mark is visage of General MacArthur himself with the iconic corncob pipe removed. Finally, each sports team will receive a custom mark for boosters merchandise and supporting materials (shown far below).</p><hr>
+				<hr><p>The proposed school identity features a primary mark, known as the "MacStar". It utilizes an enhanced color palette and has a light and dark version. The secondary mark is visage of General MacArthur himself with the iconic corncob pipe removed. Finally, each sports team will receive a custom mark for boosters merchandise and supporting materials (shown far below).</p><hr>
             </div>
             </div>
 
@@ -122,7 +120,7 @@
             <hr>
 
             <div class="one_half">
-                <p>The vision is to provide MacArthur Athletics Department and the Administration with a new brand and identity system that sets the visual direction for Generals, by an Alumni, for years to come. MacArthur's brand evolution program utilizes consistent marks across all athletics programs, honors the Generals spirit through tradition, pride and integrity. As MacArthur enters a new chapter, developing a modern and consistent athletic identity that encompasses the pride of the school is key. </p></div>
+                <p>The vision is to provide MacArthur Athletics Department and the Administration with a new brand and identity system that sets the visual direction for Generals, by an alumnus, for years to come. MacArthur's brand evolution program utilizes consistent marks across all athletics programs, honors the Generals spirit through tradition, pride and integrity. As MacArthur enters a new chapter, developing a modern and consistent athletic identity that encompasses the pride of the school is key. </p></div>
 
 	        <div class="one_half last">
 				<p>As part of the refined brand identity, all 20 of MacArthur Athletics teams will showcase consistent colors, logos, lettering and numerals. Once the fundraising effort gains speed, Nike will be approached for assistance in sourcing and customizing jerseys for select sports. An algorithm of academic standing and participation will be employed to determine priority.</p>
@@ -150,7 +148,7 @@
 </p></div>
 
             <div class="one_half last">
-				<p>If you like what you see and you are a student, parent, alumni or fan - please pledge a dollar or ten to show your support. If the fundraiser exceeds $5,000 we'll donate the total towards new signage and jerseys.</p><p>We appreciate your attention and generosity. Go Generals!</p><p>- Toby Grubb, Class of 1999<br><br><a href="" class="tg-button">DONATE VIA GOFUNDME</a></p>                                  
+				<p>If you appreciate this effort and you are a student, parent, alumni or fan - please pledge a dollar or ten to show your support. If the fundraiser exceeds $5,000 we'll donate the total towards new jerseys.</p><p>We appreciate your attention and generosity. Go Generals!</p><p>- Toby Grubb, Class of 1999<br><br><a href="" class="tg-button">DONATE VIA GOFUNDME</a></p>
             </div>
 
 
