--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          </div>
          <div class="split-screen__right">
             <p>Toby Grubb is an owner of
-              <a onmouseover="changeImage('img/this-min.jpg')" href="http://www.this.design" target="_blank" class="link">This.Studio
+              <a onmouseover="changeImage('img/this-min.jpg')" href="https://this.design" target="_blank" class="link">This.Studio
               </a> in Portland, Oregon. Previously a Creative Director at
               <a onmouseover="changeImage('img/instrument-min.jpg')" href="http://www.instrument.com" target="_blank" class="link">Instrument
               </a> and
